--- a/views/footer.html
+++ b/views/footer.html
@@ -18,7 +18,7 @@
             </div>
             <div class="col-md-3">
                 <div class="menu2">
-                    <h5>Health Packages</h5>
+                    <h5 class="text-uppercase brand-primary-lighter">Health Packages</h5>
                     <div class="submenu text-uppercase">
                         <ul>
                             <li><a href="" title="Weight Loss">Weight Loss</a></li>
@@ -26,8 +26,8 @@
                         </ul>
                     </div>
                 </div>
-                <div class="menu2">
-                    <h5>About</h5>
+                <div class="menu2 foot-about">
+                    <h5 class="text-uppercase brand-primary-lighter">About</h5>
                     <div class="submenu text-uppercase">
                         <ul>
                             <li><a href="" title="About Selfcare">About Selfcare</a></li>
@@ -39,7 +39,7 @@
             </div>
             <div class="col-md-3">
                 <div class="menu2">
-                    <h5>HEALTH SHOP</h5>
+                    <h5 class="brand-primary-lighter">HEALTH SHOP</h5>
                     <div class="submenu text-uppercase">
                         <ul>
                             <li><a href="" title="Food Munchies &amp; Beverages">FOOD MUNCHIES &amp; BEVERAGES</a></li>
@@ -49,8 +49,8 @@
                         </ul>
                     </div>
                 </div>
-                <div class="menu2">
-                    <h5>HEALTH KIT</h5>
+                <div class="menu2 foot-healthkit">
+                    <h5 class="brand-primary-lighter">HEALTH KIT</h5>
                     <div class="submenu text-uppercase">
                         <ul>
                             <li><a href="" title="Calorie Meter">CALORIE METER</a></li>
@@ -62,27 +62,27 @@
             </div>
             <div class="col-md-4">
                 <div class="">
-                    <div class="note">
+                    <div class="note brand-primary-lighter">
                         <p>Receive monthly tips on the healthiest foods and excercizes, along with the latest plans and offers.</p>
                     </div>
                     <div class="mail">
                         <form action="" class="form-inline">
                             <div class="form-group">
-                                <input type="email" class="form-control" placeholder="EMAIL">
-                                <button type="submit" class="form-control"><span><i class="fa fa-chevron-right"></i></span></button>
+                                <input type="email" class="form-control email" placeholder="EMAIL">
+                                <button type="submit" class="form-control btn-submit"><span><i class="fa fa-chevron-right brand-primary"></i></span></button>
                             </div>
                         </form>
                     </div>
-                    <div class="social-links">
+                    <div class="social-links foot-sociallinks brand-primary-light">
                         <ul>
-                            <li><a href="" traget="_blank"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="" traget="_blank"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="" traget="_blank"><i class="fa fa-instagram"></i></a></li>
-                            <li><a href="" traget="_blank"><i class="fa fa-youtube"></i></a></li>
-                            <li><a href="" traget="_blank"><i class="fa fa-pinterest-p"></i></a></li>
+                            <li><a href="" traget="_blank" class="brand-primary-lighter"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="" traget="_blank" class="brand-primary-lighter"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="" traget="_blank" class="brand-primary-lighter"><i class="fa fa-instagram"></i></a></li>
+                            <li><a href="" traget="_blank" class="brand-primary-lighter"><i class="fa fa-youtube"></i></a></li>
+                            <li><a href="" traget="_blank" class="brand-primary-lighter"><i class="fa fa-pinterest-p"></i></a></li>
                         </ul>
                     </div>
-                    <div class="copyright">
+                    <div class="copyright brand-brown-dark">
                        <p>Copyright &copy; Selfcare Support Pvt. Ltd.</p>
                        <p>All Rights Reserved | Privacy Policy | T&amp;C</p> 
                     </div>
