--- a/views/footermenu.html
+++ b/views/footermenu.html
@@ -1,14 +1,15 @@
 <div class="health-foot">
-    <div class="row-flex">
-        <div class="col-flex">
-            <div class="health-back relate">
-                <button class="get-center text-uppercase" type="button">health packages</button>
-            </div>
-        </div>
-        <div class="col-flex">
-            <div class="health-back relate">
-                <button class="get-center text-uppercase" type="button">health shop</button>
-            </div>
-        </div>
+  <div class="row-flex">
+    <div class="col-flex">
+      <div class="health-back relate">
+        <button class="get-center text-uppercase" type="button">health packages</button>
+      </div>
     </div>
+    <div class="col-flex">
+      <div class="health-back relate">
+        <img src="img/health-shop.jpg" alt="" class="img-responsive">
+        <button class="get-center text-uppercase" type="button">health shop</button>
+      </div>
+    </div>
+  </div>
 </div>
