--- a/sass/_harsh.scss
+++ b/sass/_harsh.scss
@@ -10,7 +10,13 @@
     margin-bottom: 5px;
   }
 }
-.logo { margin: 20px 0 0 10px; }
+.logo {
+  @include margin(20px 0 0 10px);
+  h1 { span {
+    font-size: 24px;
+    letter-spacing: 3px;
+  } }
+}
 // Social Links
 .links { margin: 20px 0 15px; }
 .social-links {
@@ -25,17 +31,63 @@
     }
   }
 }
-
 // Tel
 .contact-tel {
   border-left: 1px solid $brand-primary;
   border-right: 1px solid $brand-primary;
-  margin-left: -40px;
-  padding: 12px 42px 12px;
+  margin-left: -35px;
+  @include padding(12px 42px 12px);
 }
 // Signin
 .signin {
   font-size: 18px;
-  padding: 10px 0;
+  @include padding(10px 0);
   font-weight: bold;
+}
+
+
+// About
+.selfcare-image {
+  @include square(100%);
+  position: relative;
+  img {
+    @include size(100%, 80%);
+  }
+  h2 {
+    font-size: 50px;
+    font-weight: bold;
+  }
+}
+.health-design {
+  position: relative;
+}
+.about-health {
+  @include margin(50px 0);
+  @include padding(50px 0);
+  h2 {
+    font-size: 34px;
+    font-style: italic;
+  }
+  .about-health-content {
+    @include size(100%, 500px);
+    @include margin(50px 0 0);
+  }
+}
+.what-we-do {
+  @include margin(0 0 50px);
+  h2 { font-weight: bold; }
+  p { font-size: 18px; }
+  .we-do-topics {
+    .we-do-title {
+      h3 {
+        font-size: 34px;
+        font-weight: bold;
+        span {
+          position: relative;
+          display: block;
+        }
+      }
+    }
+    p { font-size: 16px; }
+  }
 }
