--- a/views/header.html
+++ b/views/header.html
@@ -17,6 +17,7 @@
               <div class="logo">
                 <h1>
                   <img src="img/logo.png" alt="">
+                  <span>for Health &amp; Immunity</span>
                 </h1>
               </div>
             </div>
