--- a/views/content/home.html
+++ b/views/content/home.html
@@ -119,11 +119,11 @@
         <div class="row">
           <div class="col-md-6">
             <div class="diet-info">
-              <h4 class="text-center">RECIPES</h4>
-              <div class="diet-holder">
-                <img src="img/recipes.png" alt="" class="img-responsive">
+              <h4 class="text-center text-bold letter-space">RECIPES</h4>
+              <div class="diet-holder m-center">
+                <img src="img/recipes.png" alt="" class="img-responsive m-center">
               </div>
-              <p class="descp">Recipes that help you eat right without compromising on taste.</p>
+              <p class="descp m-center">Recipes that help you eat right without compromising on taste.</p>
               <div class="more text-center">
                 <button class="btn btn-primary text-uppercase" type="button">Try them</button>
               </div>
@@ -131,11 +131,11 @@
           </div>
           <div class="col-md-6">
             <div class="diet-info">
-              <h4 class="text-center">CALORIE METER</h4>
-              <div class="diet-holder">
-                <img src="img/calorie.png" alt="" class="img-responsive">
+              <h4 class="text-center text-bold letter-space">CALORIE METER</h4>
+              <div class="diet-holder m-center">
+                <img src="img/calorie.png" alt="" class="img-responsive m-center">
               </div>
-              <p class="descp">Browse through nutritional information of your favourite foods with this easy to use calculator and learn which foods and beverages work for your waistline and which don't.</p>
+              <p class="descp m-center">Browse through nutritional information of your favourite foods with this easy to use calculator and learn which foods and beverages work for your waistline and which don't.</p>
               <div class="more text-center">
                 <button class="btn btn-primary text-uppercase" type="button">track them</button>
               </div>
