--- a/views/content/home.html
+++ b/views/content/home.html
@@ -67,7 +67,7 @@
                 <h5 class="text-uppercase text-bold brand-brown-dark health-title">Total number of
                   <span class="block">Clients</span>
                 </h5>
-                <h3 class="health-count white text-bold">10348</h3>
+                <h3 class="health-count text-left white text-bold">10348</h3>
               </div>
               <div class="icon inline-block v-top">
                 <img src="img/user.png" alt="" class="img-responsive">
@@ -80,12 +80,12 @@
                 <h5 class="text-uppercase text-bold brand-brown-dark health-title">Total
                   <span class="block count">Weight Loss</span>
                 </h5>
-                <h3 class="health-count white text-bold">7500
+                <h3 class="health-count text-left white text-bold">7500
                   <span>in kgs</span>
                 </h3>
               </div>
               <div class="icon inline-block">
-                  <img src="img/weight-meter.png" alt="" class="img-responsive">
+                <img src="img/weight-meter.png" alt="" class="img-responsive">
               </div>
             </div>
           </div>
@@ -95,10 +95,10 @@
                 <h5 class="text-uppercase text-bold  brand-brown-dark health-title">Presence in
                   <span class="block">Countries</span>
                 </h5>
-                <h3 class="health-count white text-bold">38</h3>
+                <h3 class="health-count text-left white text-bold">38</h3>
               </div>
               <div class="icon inline-block">
-                  <img src="img/world.png" alt="" class="img-responsive">
+                <img src="img/world.png" alt="" class="img-responsive">
               </div>
             </div>
           </div>
@@ -146,36 +146,54 @@
     </div>
   </div>
 </div>
-<div class="blog brand-brown-gray-bg">
+<div class="blog-section brand-brown-gray-bg">
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <div class="blog brand-graylight-bg">
+        <div class="blog-main brand-graylight-bg">
           <div class="heading">
-            <h5>BLOG</h5>
+            <h4 class="text-bold">BLOG</h4>
           </div>
           <div class="blog-info">
-            <div class="blog-imgholder">
-              <img src="" alt="" class="img-responsive">
-            </div>
-            <div class="blog-info">
-              <p>Anti Ageing Tips</p>
-            </div>
-          </div>
-          <div class="blog-info">
-            <div class="blog-imgholder">
-              <img src="" alt="" class="img-responsive">
-            </div>
-            <div class="blog-info">
-              <p>Calcium For All Ages And Genders</p>
+            <div class="row">
+              <div class="col-md-4">
+                <div class="blog-imgholder">
+                  <img src="img/blog1.png" alt="" class="img-responsive">
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="blog-imginfo">
+                  <p>Anti Ageing Tips</p>
+                </div>
+              </div>
             </div>
           </div>
           <div class="blog-info">
-            <div class="blog-imgholder">
-              <img src="" alt="" class="img-responsive">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="blog-imgholder">
+                  <img src="img/blog2.png" alt="" class="img-responsive">
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="blog-imginfo">
+                  <p>Calcium For All Ages And Genders</p>
+                </div>
+              </div>
             </div>
-            <div class="blog-info">
-              <p>Calories In Cocktails</p>
+          </div>
+          <div class="blog-info">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="blog-imgholder">
+                  <img src="img/blog3.png" alt="" class="img-responsive">
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="blog-imginfo">
+                  <p>Calories In Cocktails</p>
+                </div>
+              </div>
             </div>
           </div>
           <div class="text-right">
@@ -184,18 +202,22 @@
         </div>
       </div>
       <div class="col-md-6">
-        <div class="askqts brand-graylight-bg">
-          <h5>ASK
-            <span>SUMAN</span>
-          </h5>
-          <p>Ask and get an answer on the healthiest food tips</p>
+        <div class="askqts blog-main brand-graylight-bg">
+          <div class="heading">
+            <h4>ASK
+              <span class="text-light">SUMAN</span>
+            </h4>
+          </div>
+          <h4 class="letter-space">Ask and get an answer on the healthiest food tips</h4>
           <form action="">
-            <select name="" id="" class="form-control">
-              <option value="">Choose a Category</option>
-              <option value="">Category 1</option>
-              <option value="">Category 2</option>
-              <option value="">Category 3</option>
-            </select>
+            <div class="form-group">
+              <select name="" id="" class="form-control">
+                <option value="">Choose a Category</option>
+                <option value="">Category 1</option>
+                <option value="">Category 2</option>
+                <option value="">Category 3</option>
+              </select>
+            </div>
             <div class="row">
               <div class="col-md-6">
                 <div class="form-group">
@@ -220,23 +242,24 @@
     </div>
   </div>
 </div>
-<div class="container">
-  <div class="aboutus">
-    <div class="row">
-      <div class="col-md-6">
-        <div class="about-info">
-          <h3 class="text-uppercase">About us</h3>
-          <h5>Only the fit know how fabulous it feels.</h5>
-          <p>At Selfcare a team of experts create designer diets to balance out a body-system that rights itself to suit your needs—be it weight loss, the need to circumvent aging, evade arthritis, diabetes or hypertension. Under the expert and experienced
-            guidance of nutritionist Suman Agarwal , a qualified clinical nutritionist as well as a fitness...</p>
-          <div class="more">
-            <button class="text-uppercase btn btn-primary">know more</button>
+<div class="section-about">
+  <div class="container">
+    <div class="aboutus">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="about-info">
+            <h3 class="text-uppercase brand-brown-dark2">About us</h3>
+            <h5 class="text-bold">Only the fit know how fabulous it feels.</h5>
+            <p class="text-justify">At Selfcare a team of experts create designer diets to balance out a body-system that rights itself to suit your needs—be it weight loss, the need to circumvent aging, evade arthritis, diabetes or hypertension. Under the expert and experienced guidance of nutritionist Suman Agarwal , a qualified clinical nutritionist as well as a fitness...</p>
+            <div class="more">
+              <button class="text-uppercase btn btn-primary">know more</button>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-md-6">
-        <div class="about-imgholder">
-          <img src="" alt="" class="img-responsive">
+        <div class="col-md-6">
+          <div class="about-imgholder m-center">
+            <img src="img/suman_priyanka.jpg" alt="" class="img-responsive m-center">
+          </div>
         </div>
       </div>
     </div>
