--- a/sass/main.scss
+++ b/sass/main.scss
@@ -128,6 +128,9 @@ $instagram: #396d9a !default;
     color: #fff !important;
   }
 }
+.foot-btn {
+  @include button-variant($brand-primary, white, $brand-primary);
+}
 @import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap";
 * {
   -webkit-font-smoothing: antialiased;
@@ -164,6 +167,22 @@ ul {
     list-style: none;
   }
 }
+input,
+select,
+textarea {
+  &:focus {
+    border-color: $brand-primary !important;
+    box-shadow: none !important;
+    outline: none !important;
+  }
+}
+form .form-control {
+  min-height: 40px;
+  border-radius: 4px;
+}
+textarea {
+  resize: none;
+}
 // Class
 .relate {
   position: relative;
@@ -187,6 +206,9 @@ ul {
 }
 .text-bold {
   font-weight: 700;
+}
+.text-light {
+  font-weight: 300;
 }
 .row-flex {
   @include display(flex);
@@ -362,6 +384,68 @@ button {
     text-align: justify;
   }
 }
+.blog-section {
+  padding: 70px 0;
+  .heading {
+    h4 {
+      font-size: 40px;
+      @extend.letter-space;
+    }
+  }
+  .blog-info {
+    margin: 15px 0;
+  }
+  .blog-imgholder {
+    @include square(100px);
+    border-radius: 8px;
+    img {
+      max-width: 100%;
+      max-height: 100%;
+      @extend.m-center;
+    }
+  }
+  .blog-imginfo {
+    min-height: 100px;
+    padding: 30px;
+    border-bottom: 2px solid $brand-brown;
+    p {
+      width: 70%;
+      font-size: 20px;
+      @extend.text-bold;
+    }
+  }
+}
+.blog-main {
+  padding: 25px;
+}
+.askqts {
+  form {
+    select {
+      background-color: $brand-primary;
+      color: #fff;
+    }
+    textarea {
+      min-height: 224px;
+    }
+  }
+}
+.section-about {
+  padding: 60px 0;
+  .about-info {
+    h3 {
+      margin: 0 0 25px;
+      font-size: 30px;
+    }
+    h5 {
+      font-size: 20px;
+    }
+    p {
+      font-size: 17px;
+      margin: 20px 0;
+      line-height: 28px;
+    }
+  }
+}
 ///end home///
 ///////////////
 //Footer///////
@@ -427,6 +511,25 @@ footer {
   .copyright {
     margin-top: 25px;
     @extend.letter-space;
+  }
+}
+.health-foot {
+  .health-back {
+    min-height: 200px;
+  }
+  .package {
+    background: url('../img/foot-healthpack.jpg') no-repeat;
+    background-size: 100% 100%;
+  }
+  .shop {
+    background: url('../img/health-shop.jpg') no-repeat;
+    background-size: 100% 100%;
+  }
+  .foot-btn {
+    border-radius: 5px;
+    padding: 12px 28px;
+    font-weight: 900;
+    letter-spacing: 2px;
   }
 }
 //////end footer/////
